--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "srt-renamer": {
       "commandName": "Project",
-      "commandLineArgs": " .\\srt-renamer.exe --verbose --path E:\\Data\\Media\\Videos\\sp2 --video \"S(\\d\\d?).E(\\d\\d?)\" --srt \"S(\\d\\d?).E(\\d\\d?)\""
+      "commandLineArgs": " .\\srt-renamer.exe --verbose --path \"E:\\Data\\Media\\Videos\\Kingdom 2019 Season 1 Complete KOREAN 720p NF WEBRip x264[i_c]\""
     }
   }
 }
